# skills

./: .gitignore  CLAUDE.md  README.md  install_skills.sh  make-project-skill.skill  pyproject.toml  setup.sh
claude/: managed-settings.json  settings.json
claude/scripts/: block-git-write.sh
cli-tool/: install.sh
cli-tool/templates/: how.sh
codex/: requirements.toml
config/opencode/: opencode.json
cursor/: hooks.json  sandbox.json
cursor/hooks/: block-git-write.sh
cursor/rules/: sandbox-policy.mdc
docs/: references.md  skill-provenance.md
docs/cpp-guides/: README.md
etc/: references.md
memory/: AGENTS.md  claude_sandbox.md  codex_sandbox.md  cursor_sandbox.md
scripts/: block-git-write.sh
skill-creator/references/: claude-code-features.md  output-patterns.md  workflows.md
skills/add-guidance/: SKILL.md
skills/adr/: SKILL.md
skills/ansible/: SKILL.md
skills/authoring-ansible/: SKILL.md
skills/authoring-excalidraw-files/: SKILL.md
skills/authoring-just-recipes/: SKILL.md
skills/authoring-mermaid-diagrams/: SKILL.md
skills/authoring-plantuml-diagrams/: SKILL.md
skills/bash/: SKILL.md
skills/creating-skills/: SKILL.md
skills/decision-matrix/: SKILL.md
skills/design/: SKILL.md
skills/dispatching-parallel-agents/: SKILL.md
skills/docker/: SKILL.md
skills/docker-patterns/: SKILL.md
skills/dockerizing-services/: SKILL.md
skills/docs/: SKILL.md
skills/documentation/: SKILL.md
skills/excalidraw/: SKILL.md
skills/glossary/: SKILL.md
skills/pdf/: SKILL.md  (+1 more)
work-in-progress/: codex-rules.md  structural-edit-review.md
(+160 files in other folders)
