[project]
name = "skills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pdf2image>=1.17.0",
    "pillow>=12.1.0",
    "pypdf>=6.6.2",
    "pyyaml>=6.0.3",
    "pytest>=8.0.0",
    "openpyxl>=3.1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "skills/processing-pdfs/scripts",
    "skills/processing-xlsx/scripts",
]

[tool.pyright]
extraPaths = [
    "skills/processing-pdfs/scripts",
    "skills/processing-xlsx/scripts",
]
